--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,8 @@
 
 site_name: "LoremIpsumDolor"
 
+site_favicon: favicon.svg
+
 docs_dir: 'pages'
 
 site_author: "Consectetur Adipiscing"
@@ -34,7 +36,7 @@ theme:
     ##     spacelab, superhero, united, yeti
     ##
 
-    name: readthedocs
+    name: material
 
     ##
     ## you can alternate colors for the navigation header.
